Lab06B, created a working timer that counts down from 5 minutes and added first two questions of the quiz. In a scroll layout, each question has a picture of a pokemon and four answer choices in the form of buttons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="welcome">Welcome to the Pokemon Quiz!</string>
     <string name="start">Start Quiz!</string>
     <string name="timestart">5:00</string>
+    <string name="q1c1">Togekiss</string>
+    <string name="q2c3">Empoleon</string>
+    <string name="q1c2">Cleffa</string>
+    <string name="q2c4">Seaking</string>
+    <string name="q1c3">Tropius</string>
+    <string name="q1c4">Tynamo</string>
+    <string name="q2c1">Prinplup</string>
+    <string name="q2c2">Keldeo</string>
 </resources>
